2002-10-09  Morten Welinder  <terra@diku.dk>

	* src/gnumeric-graph.c (struct _GnmGraphVector): Avoid "gboolean
	... : 1".
	* src/item-bar.c (struct _ItemBar): Ditto.
	* src/item-cursor.c (struct _ItemCursor): Ditto.
	* src/formats.h (FormatCharacteristics): Ditto.
	* src/format-template.h (struct _FormatTemplate): Ditto.
	* src/sheet-private.h (struct _SheetPrivate): Ditto.
	* src/sheet-view.h (struct _SheetView): Ditto.
	* src/validation.h (struct _Validation): Ditto.
	* src/workbook-priv.h (struct _Workbook): Ditto.
	* src/expr-name.h (struct _GnmNamedExpr): Ditto.

2002-10-09  Jody Goldberg <jody@gnome.org>

	* src/commands.c (cmd_define_name_redo) : fix ref counting.
	(cmd_define_name_undo) : and here.

2002-10-08  Jody Goldberg <jody@gnome.org>

	* src/format.c (do_render_number) : Use the scale factor.
	(format_number) : init the scale factor when a fmt ends a section with
	  a comma.

2002-10-08  Morten Welinder  <terra@diku.dk>

	* src/workbook-view.c (wb_view_new_from_file): Catch invalid file
	names.

	* src/gutils.c (gnumeric_valid_filename): New function.

2002-10-08  Jody Goldberg <jody@gnome.org>

	Patch from peninguy.nicolas@wanadoo.fr (Nicolas Peninguy)
	* src/formats.c : regexp for accounting too.

2002-10-08  Jody Goldberg <jody@gnome.org>

	* src/parse-util.c (rangeref_parse) : handle relative full col/row
	  references.

2002-10-08  Jody Goldberg <jody@gnome.org>

	* src/parser.y (parser_lookup_name) : default the placeholder to be at
	  workbook scope.

	* src/cellspan.c (row_calc_spans) : new.

	* src/dependent.c (cell_eval_content) : flag the row as needing
	  respan.  I'll probably want to distinguish between span and render
	  somehow.

	* src/sheet.c (sheet_update_only_grid) : test a new idea for doing
	  just in time spanning.  It does not support a true model view split
	  of the rendering.  However, it does delay the render & span until
	  the row is visible, and as a result it is feasible to support